Added: API Customers - Refactoring on customers
