# api/openAPI.yml
@@ -1,302 +1,252 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
-  version: '1.0.0'
-  title: 'Goodstock'
-  license:
-    name: MIT
+  title: Goodstock API
+  version: 1.0.0
 servers:
-  - url: 'localhost:3000'
+  - url: http://localhost:3000
+tags:
+  - name: Customers
+    description: All routes related to the the customers API.
+  - name: Organizations
+    description: All routes related to the customers API, using the organizations functions.
+  - name: Products
+    description: All routes related to the Products API.
+  - name: Sales
+    description: All routes related to the Sales API.
 paths:
-# Customers API
-  /customers:
-    post:
-      summary: 'Create customer'
-      operationId: postCustomer
-      security:
-        - bearerAuth: []
+  # Customers API
+  /customers/customers/:
+    get:
+      tags:
+        - Customers
+      summary: Get an existing customer by email or id.
       parameters:
-        - name: email
-          in: query
+        - in: query
+          name: email
           required: true
-          description: 'The customers email'
           schema:
             type: string
-            examples:
-              - email@gmail.com
-        - name: password
-          in: query
+            example: email@domain.com
+      responses:
+        '200':
+          description: Successful operation.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClientCustomer'          
+        '400':
+          description: Invalid email or id.
+      security:
+        - bearerAuth: [read]
+
+  /customers/customers/auth:
+    get:
+      tags:
+        - Customers
+      summary: Try to auth a customer.
+      parameters:
+        - in: query
+          name: email
           required: true
-          description: 'The customers password'
           schema:
             type: string
-            examples:
-              - password
-        - name: organization
-          in: query
+            example: email@domain.com
+        - in: query
+          name: password
           required: true
-          description: 'The customers organization'
+          schema:
+            type: string
+            example: password123
+      responses:
+        '200':
+          description: Successful operation.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClientCustomer'          
+        '400':
+          description: Invalid email.
+        '401':
+          description: Invalid password.
+      security:
+        - bearerAuth: [read]
+
+  /customers/customers/{id}:
+    get:
+      tags:
+        - Customers
+      summary: Get an existing customer by email or id.
+      parameters:
+        - in: path
+          name: id
+          required: true
           schema:
             type: integer
             format: int32
-            examples:
-              - 1
+      responses:
+        '200':
+          description: Successful operation.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClientCustomer'          
+        '400':
+          description: Invalid email or id.
+      security:
+        - bearerAuth: [read]
+
+    post:
+      tags:
+        - Customers
+      summary: Try to create a new customer.
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PostCustomer'
       responses:
         '201':
-          description: 'Customer created.'
+          description: Successful operation.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Customer'
+                $ref: '#/components/schemas/ClientCustomer'          
         '400':
-          description: 'Invalid Params'
-        default:
-          description: Unexpected error
-
-  /customers/{id}:
-    get:
-      summary: 'Get customer'
-      operationId: getCustomer
+          description: Invalid customer.
       security:
-        - bearerAuth: []
-      parameters:
-        - name: id 
-          in: path
-          required: true
-          description: 'The customers id'
-          schema:
-            type: integer
-            examples:
-              - 1
-      responses:
-        '200':
-          description: 'Customer found.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Customer'
-        '400':
-          description: 'Invalid Params'
-        default:
-          description: Unexpected error
+        - bearerAuth: [write]
 
     patch:
-      summary: 'Update customer'
-      operationId: patchCustomer
-      security:
-        - bearerAuth: []
+      tags:
+        - Customers
+      summary: Try to update a customer.
       parameters:
-        - name: id 
-          in: path
-          required: true
-          description: 'The customers id'
-          schema:
-            type: integer
-            examples:
-              - 1
-        - name: email
-          in: query
-          required: false
-          description: 'The customers email'
-          schema:
-            type: string
-            examples:
-              - email@gmail.com
-        - name: password
-          in: query
-          required: false
-          description: 'The customers password'
-          schema:
-            type: string
-            examples:
-              - password
-      responses:
-        '200':
-          description: 'Customer updated.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Customer'
-        '400':
-          description: 'Invalid Params'
-        default:
-          description: Unexpected error
-
-  /customers/{id}/auth:
-    get:
-      summary: 'Auth customer'
-      operationId: authCustomer
-      security:
-        - bearerAuth: []
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-              type: integer
-              format: int32
-              examples:
-                - id
-        - name: password
-          in: query
-          required: true
-          schema:
-            type: string
-            examples:
-              - password
-      responses:
-        '200':
-          description: 'Customer authorized.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Customer'
-        '400':
-          description: 'Invalid Params'
-        default:
-          description: Unexpected error
-
-# Organizations API
-  /organizations:
-    post:
-      summary: 'Create Organization'
-      operationId: postOrganization
-      security:
-        - bearerAuth: []
-      parameters:
-        - name: name
-          in: query
-          required: true
-          schema:
-            type: string
-            examples:
-              - organizationName
-        - name: masterPassword
-          in: query
-          required: true
-          schema:
-            type: string
-            examples:
-              - password
-      responses:
-        '200':
-          description: 'organization created.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Organization'
-        '400':
-          description: 'Invalid Params'
-        default:
-          description: Unexpected error
-  
-  /organizations/{id}:
-    get:
-      summary: 'Find Organization'
-      operationId: getOrganization
-      security:
-        - bearerAuth: []
-      parameters:
-        - name: id
-          in: path
+        - in: path
+          name: id
           required: true
           schema:
             type: integer
             format: int32
-            examples:
-              - 1
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PostCustomer'
       responses:
-        '200':
-          description: 'organization found.'
+        '201':
+          description: Successful operation.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Organization'
+                $ref: '#/components/schemas/ClientCustomer'          
         '400':
-          description: 'Invalid Params'
-        default:
-          description: Unexpected error
-    patch:
-      summary: 'Update Organization'
-      operationId: patchOrganization
+          description: Invalid customer.
       security:
-        - bearerAuth: []
+        - bearerAuth: [write]
+
+  /customers/customers/{id}/auth/:
+    get:
+      tags:
+        - Customers
+      summary: Try to auth a customer.
       parameters:
-        - name: id
-          in: path
+        - in: path
+          name: id
           required: true
           schema:
             type: integer
             format: int32
-            examples:
-              - 1
-        - name: name
-          in: query
-          required: false
+        - in: query
+          name: password
+          required: true
           schema:
             type: string
-            examples:
-              - organizationName
-        - name: masterPassword
-          in: query
-          required: false
-          schema:
-            type: string
-            examples:
-              - password
+            example: password123
       responses:
         '200':
-          description: 'organization updated.'
+          description: Successful operation.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Organization'
+                $ref: '#/components/schemas/ClientCustomer'          
         '400':
-          description: 'Invalid Params'
-        default:
-          description: Unexpected error
+          description: Invalid email.
+        '401':
+          description: Invalid password.
+      security:
+        - bearerAuth: [read]
 
 components:
   schemas:
-    Customer:
+    # Customers
+    # Request Schemas
+    PostCustomer:
       type: object
       required:
-        - id
-        - email
-        - organization
-      properties:
-        id:
-          type: integer
-          format: int32
-          examples:
-            - 1
-        email:
-          type: string
-          examples:
-            - email@gmail.com
-        organization:
-          type: integer
-          format: int32
-          examples:
-            - 1
-    Organizations:
-      type: object
-      required:
-        - id
         - name
+        - email
+        - password
+        - organizationId
       properties:
-        id:
-          type: integer
-          format: int32
-          examples:
-            - 1
         name:
           type: string
-          examples:
-            - organizationName
+          example: Joel
+        email:
+          type: string
+          example: email@domain.com
+        password:
+          type: string
+          example: password123
+        organizationId:
+          type: integer
+          format: int32
+
+    # Response Schemas
+    ClientCustomer:
+      type: object
+      required:
+        - status
+        - data
+      properties:
+        status:
+          type: string
+          example: Success
+        data:
+          type: object
+          required:
+          - id
+          - email
+          - organization
+          properties:
+            id:
+              type: integer
+              format: int32
+            name:
+              type: string
+              example: Joel
+            email:
+              type: string
+              example: email@domain.com
+            organizationId:
+              type: integer
+              format: int32
 
   securitySchemes:
     bearerAuth:
       type: http
       scheme: bearer
+
+
 security:
-  - bearerAuth: []
+  - bearerAuth:
+    - read
+    - write
